# dino

./: CMakeLists.txt  DinoRushPort.dol  DinoRushPort.elf  Makefile  README.md  dino_game.c  dinorush  dinorush_debug  libSDL3.0.dylib  libSDL3_image.0.dylib  test_sdl  test_sdl.c
SDL/lib/macos/: libSDL3.0.dylib  libSDL3_image.0.2.4.dylib  libSDL3_ttf.0.2.2.dylib  libSDL3_ttf.0.dylib
dinorush_debug.dSYM/Contents/: Info.plist
dinorush_debug.dSYM/Contents/Resources/DWARF/: dinorush_debug
dinorush_debug.dSYM/Contents/Resources/Relocations/aarch64/: dinorush_debug.yml
header/: DinoRush.h  dino_rush.h  game_object.h  level.h  ll.h  window.h
sources/: main.c
src/: DinoRush.c  dino_rush.c  game_object.c  level.c  ll.c  main.c  window.c
tests/: test_game.cpp  test_game_simple.cpp
textures/: sprites.scf
